Apply validation messages with Spring Validation.

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -6,3 +6,6 @@ error.database.procedure-type-does-not-exist=Procedure Type does not exist!
 error.database.procedure-type-list-does-not-exist=Procedure Type list does not exist!
 error.database.procedure-does-not-exist=Procedure does not exist!
 error.database.procedure-list-does-not-exist=Procedure list does not exist!
+error.validation=Validation request error!
+missing.parameter.request=Required request parameter!
+invalid.parameter.request=Invalid request paramenter!
