--- a/src/main/resources/messages/messages_pt_BR.properties
+++ b/src/main/resources/messages/messages_pt_BR.properties
@@ -6,3 +6,6 @@ error.database.procedure-type-does-not-exist=Tipo de Procedimento não existe!
 error.database.procedure-type-list-does-not-exist=Lista de Tipo de Procedimentos não existe!
 error.database.procedure-does-not-exist=Procedimento não existe!
 error.database.procedure-list-does-not-exist=Lista de Procedimentos não existe!
+error.validation=Erro de validação de requsição!
+missing.parameter.request=Requer parâmetro de requisição!
+invalid.parameter.request=Parâmetro inválido!
