Started the implementation of share file system.

--- a/src/main/resources/ValidationMessages_pt_BR.properties
+++ b/src/main/resources/ValidationMessages_pt_BR.properties
@@ -4,4 +4,8 @@ validation.user.surname.notBlank=Sobrenome não pode ser vazio.
 validation.email.notBlank=Email não pode ser vazio.
 validation.email.notValid=Email não é válido.
 validation.password.notBlank=Senha não pode ser vazia.
-validation.password.notValid=Password must be at least {min} and at most {max} characters.
+validation.password.notValid=A senha deve ser entre {min} e até {max} characteres.
+
+#Workbook
+workbook.io.error=Erro ao abrir ou fechar recursos (Workbook).
+workbook.array.error=Erro ao converter Excel para array de bytes.
