Set validation for controllers.

--- a/src/main/resources/ValidationMessages_pt_BR.properties
+++ b/src/main/resources/ValidationMessages_pt_BR.properties
@@ -6,6 +6,33 @@ validation.email.notValid=Email não é válido.
 validation.password.notBlank=Senha não pode ser vazia.
 validation.password.notValid=A senha deve ser entre {min} e até {max} characteres.
 
+#Validation Procedure Type
+validation.procedure.type.name.notBlank=Nome não pode ser vazio.
+validation.procedure.type.percentage.notNull=Porcentagem não pode ser nulo.
+validation.procedure.type.percentage.min=Porcentagem abaixo do minimo.
+validation.procedure.type.user.notNull=ID do usuário não pode ser nulo.
+validation.procedure.type.id.notNull=ID do tipo de procedimento não pode ser nulo.
+validation.procedure.type.id.positive=ID do tipo de procedimento não deve ser negativo.
+
+#Validation Procedure
+validation.procedure.date.notNull=Data não pode ser nulo.
+validation.procedure.date.pastOrPresent=Data de registro é maior que hoje.
+validation.procedure.customer.notEmpty=Cliente não pode ser vazio.
+validation.procedure.value.notNull=Valor não pode ser nulo.
+validation.procedure.user.notNull=ID do usuário não pode ser nulo.
+validation.procedure.month.positive=Month is not negative.
+validation.procedure.year.positive=Year is not negative.
+validation.procedure.user.positive=User ID is not negative.
+
+#Validation Share
+validation.share.extension.notNull=Extenção não pode ser nula.
+validation.share.month.positive=Mês não deve ser negativo.
+validation.share.year.positive=Ano não deve ser negativo.
+validation.share.user.positive=ID do usuário não deve ser negativo.
+validation.share.user.notNull=ID do usuário não deve ser nulo.
+validation.share.month.notNull=Mês não pode ser nulo.
+validation.share.year.notNull=Ano não pode ser nulo.
+
 #Workbook
 workbook.io.error=Erro ao abrir ou fechar recursos (Workbook).
 workbook.array.error=Erro ao converter Excel para array de bytes.
