Implemented Swagger documentation.

--- a/src/main/resources/ValidationMessages_pt_BR.properties
+++ b/src/main/resources/ValidationMessages_pt_BR.properties
@@ -4,7 +4,7 @@ validation.user.surname.notBlank=Sobrenome não pode ser vazio.
 validation.email.notBlank=Email não pode ser vazio.
 validation.email.notValid=Email não é válido.
 validation.password.notBlank=Senha não pode ser vazia.
-validation.password.notValid=A senha deve ser entre {min} e até {max} characteres.
+validation.password.notValid=Senha deve conter pelo menos {min} caracteres.
 
 #Validation Procedure Type
 validation.procedure.type.name.notBlank=Nome não pode ser vazio.
