Fix initial exceptions.

--- a/src/main/resources/messages/messages_pt_BR.properties
+++ b/src/main/resources/messages/messages_pt_BR.properties
@@ -9,3 +9,6 @@ error.database.procedure-list-does-not-exist=Lista de Procedimentos não existe!
 error.validation=Erro de validação de requsição!
 missing.parameter.request=Requer parâmetro de requisição!
 invalid.parameter.request=Parâmetro inválido!
+error.process.login=Erro ao processar login!
+workbook.io.error=Erro ao abrir ou fechar recursos (Workbook).
+workbook.array.error=Erro ao converter Excel para array de bytes.
