--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -8,4 +8,7 @@ error.database.procedure-does-not-exist=Procedure does not exist!
 error.database.procedure-list-does-not-exist=Procedure list does not exist!
 error.validation=Validation request error!
 missing.parameter.request=Required request parameter!
-invalid.parameter.request=Invalid request paramenter!
+invalid.parameter.request=Invalid request parameter!
+error.process.login=Error on process login!
+workbook.io.error=Resource opening and closing error (Workbook).
+workbook.array.error=Error converting excel to byte array.
