--- a/src/main/resources/messages/messages_pt_BR.properties
+++ b/src/main/resources/messages/messages_pt_BR.properties
@@ -10,5 +10,6 @@ error.validation=Erro de validação de requsição!
 missing.parameter.request=Requer parâmetro de requisição!
 invalid.parameter.request=Parâmetro inválido!
 error.process.login=Erro ao processar login!
+not.authorized=Você não tem autorização!
 workbook.io.error=Erro ao abrir ou fechar recursos (Workbook).
 workbook.array.error=Erro ao converter Excel para array de bytes.
