--- a/src/main/resources/messages/messages_pt_BR.properties
+++ b/src/main/resources/messages/messages_pt_BR.properties
@@ -12,3 +12,4 @@ invalid.parameter.request=Parâmetro inválido!
 error.process.login=Erro ao processar login!
 workbook.io.error=Erro ao abrir ou fechar recursos (Workbook).
 workbook.array.error=Erro ao converter Excel para array de bytes.
+pdf.io.error=Erro ao abrir ou fechar recursos (PDF).
