--- a/src/main/resources/messages/messages_en_US.properties
+++ b/src/main/resources/messages/messages_en_US.properties
@@ -12,3 +12,4 @@ invalid.parameter.request=Invalid request parameter!
 error.process.login=Error on process login!
 workbook.io.error=Resource opening and closing error (Workbook).
 workbook.array.error=Error converting excel to byte array.
+pdf.io.error=Resource opening and closing error (PDF).
